--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "linked-list"
 version = "0.1.0"
 edition = "2021"
+description = "A package containing a minimal i32 LinkedList implementation"
+license = "APACHE" 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
