Add license, change package name, add Readme

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "mini-linked-list"
 version = "0.1.0"
 edition = "2021"
 description = "A package containing a minimal i32 LinkedList implementation"
-license = "APACHE" 
+license = "Apache-2.0" 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
